src/main/java/sample/dependency/Inversion/good/Runner.java
package sample.dependency.Inversion.good;

/**
 * 
 * Distibution under GNU GENERAL PUBLIC LICENSE Version 2, June 1991
 * 
 * @author dmalalan
 * @created Apr 12, 2016 2:50:38 PM
 * 
 * @blog https://malalanayake.wordpress.com/
 */
public interface Runner {
 public void run();
}
