src/main/java/sample/dependency/Inversion/bad/ServiceProgram.java
package sample.dependency.Inversion.bad;

/**
 * 
 * Distibution under GNU GENERAL PUBLIC LICENSE Version 2, June 1991
 * 
 * @author dmalalan
 * @created Apr 12, 2016 2:49:09 PM
 * 
 * @blog https://malalanayake.wordpress.com/
 */
public class ServiceProgram {
 public void run() {
	System.out.println("[RUN:Service]");
 }
}
